--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .container img {
-    position: absolute;
+    position: relative;
     top: 0px;
-    right: 850px;
-    max-width: 200px;
-    max-height: 200px;
+    left: 0px;
+    max-width: 150px;
+    max-height: 150px;
 }
 h1 {
     font-size: 24px;
